remove wishlist and fix z-index

--- a/src/public/css/userprofile.css
+++ b/src/public/css/userprofile.css
@@ -9,7 +9,7 @@
     position: absolute;
     top: 8%;
     right: 3%;
-    z-index: 1000;
+    z-index: 800;
     width:330px;
     max-height: 0px;
     overflow: hidden;
